# rust-react-julia

./: .gitignore  Cargo.toml  LICENSE  README.md
react-app/: package-lock.json
react-app/src/: App.css  App.js
react-app/src/components/: getcanvas.js  juliacanvas.js  wscanvas.js
react-app/src/utils/: putimage.js  rndParams.js
src/: handler.rs  julia.rs  main.rs  ws_handler.rs
