[package]
name = "actix_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-ws = "0.2.5"
actix-rt = "2.8.0"
env_logger = "*"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
image = "0.24.5"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
tokio = { version = "1.13.1", features = ["rt", "macros", "sync", "time"] }
serde_json = "1.0.93"
